# miniBTC

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Node.cpp  Node.h  Webserver.cpp  Webserver.h
common/: BlockchainDataStructs.cpp  BlockchainDataStructs.h  BlockingQueue.h  CMakeLists.txt  Configuration.cpp  Configuration.h  HttpRequestHolder.h  Utility.cpp  Utility.h
proto/: CMakeLists.txt  SignTransaction.cpp  transaction.txt
scripts/: sendBlocks.sh
unitTests/: CMakeLists.txt  UnitTests.cpp
unitTests/testFiles/: transaction2.txt
